clotting Time,ESR, PCV, Osmotic Fragility

--- a/bloodRecord.tex
+++ b/bloodRecord.tex
@@ -3,6 +3,7 @@
 \usepackage{tabularx}
 \usepackage[a4paper, left=1in,right=1in,top=2cm,bottom=1.5cm]{geometry}
 \usepackage{fancyhdr}
+\usepackage{csvsimple}
 \pagestyle{plain}
 \renewcommand{\chaptername}{Experiment}
 \usepackage[utf8]{inputenc}
@@ -730,103 +731,269 @@
 									\begin{tabular}{p{5in} p{1in}}
 										\textbf{Exp No:}  & \textbf{Date:}\\
 									\end{tabular}
-\addfig{%
-									\begin{figure}[h]
-										\centering
-										\includegraphics[scale=.5]{./bleedingTime.jpg}
-										\label{bleedingTime}
-										\caption*{\textbf{Estimation Of Bleeding Time}}
-									\end{figure}
-									}
+									\addfig{%
+										\begin{figure}[h]
+											\centering
+											\includegraphics[scale=.5]{./bleedingTime.jpg}
+											\label{bleedingTime}
+											\caption*{\textbf{Estimation Of Bleeding Time}}
+										\end{figure}
+										}
 
-									\section*{Aim}
-									To determine the bleeding time by Duke’s method
-									\section*{Apparatus Required}
-									Filter paper, lancet, spirit, cotton swabs \& stop watch.	
-									\section*{Principle}
-									The time interval between skin puncture and spontaneous, unassisted stoppage of bleeding is called bleeding time. It is a test for assessing the function of platelets and integrity of capillaries.
-									\section*{Procedure}
-									\begin{enumerate}
-										\item{Clean the tip of the finger with spirit and cotton and allow the finger to dry.}
-										\item{Make a good deep finger prick with the lancet to get free flowing blood.}
-										\item{Do not squeeze the finger.}
-										\item{Immediately start the stopwatch.}
-										\item{Gently touch the puncture site with a clean filter paper every 15 seconds.}
-										\item{Repeat this step until no further blood spot appears on the filter paper.}
-										\item{Observe that successive spots are smaller in size.}
-										\item{Count the number of blood spots including the dry spot on the filter paper and divide it by 2 to get the bleeding time in minutes.}
-										\item{Normal bleeding time by Duke’s method is 2-5minutes.}
+										\section*{Aim}
+										To determine the bleeding time by Duke’s method
+										\section*{Apparatus Required}
+										Filter paper, lancet, spirit, cotton swabs \& stop watch.	
+										\section*{Principle}
+										The time interval between skin puncture and spontaneous, unassisted stoppage of bleeding is called bleeding time. It is a test for assessing the function of platelets and integrity of capillaries.
+										\section*{Procedure}
+										\begin{enumerate}
+											\item{Clean the tip of the finger with spirit and cotton and allow the finger to dry.}
+											\item{Make a good deep finger prick with the lancet to get free flowing blood.}
+											\item{Do not squeeze the finger.}
+											\item{Immediately start the stopwatch.}
+											\item{Gently touch the puncture site with a clean filter paper every 15 seconds.}
+											\item{Repeat this step until no further blood spot appears on the filter paper.}
+											\item{Observe that successive spots are smaller in size.}
+											\item{Count the number of blood spots including the dry spot on the filter paper and divide it by 2 to get the bleeding time in minutes.}
+											\item{Normal bleeding time by Duke’s method is 2-5minutes.}
+										\end{enumerate}
+										\section*{Result}
+										The bleeding time determined by Duke’s method is $\rule{5cm}{0.1cm}$
+										\section*{Questions}
+										\begin{enumerate}
+											\item{Define bleeding time.}
+											\item{What are the other methods to determine the bleeding time?}
+											\item{What is hemostasis?}
+											\item{What is the role of platelets in hemostasis?}
+											\item{What is the normal platelet count? What do you mean by thrombocytosis?}
+											\item{Name few conditions where bleeding time is prolonged?}
+											\item{What is Thrombocytopenic purpura? Comment on the clotting time in this condition.}
+										\end{enumerate}
+
+
+										\chapter*{\centering Estimation Of Clotting Time}
+										\begin{tabular}{p{5in} p{1in}}
+											\textbf{Exp No:}  & \textbf{Date:}\\
+										\end{tabular}
+										\section*{Aim}
+
+									\addfig{%
+										\begin{figure}[h]
+											\centering
+											\includegraphics[scale=.5]{./clottingTime.jpg}
+											\label{clottingTime}
+											\caption*{\textbf{Estimation Of Clotting Time}}
+										\end{figure}
+										}
+										To determine the clotting time of blood by Wright’s capillary glass tube method.
+										\section*{Apparatus Required}
+										Capillary glass tube, lancet, spirit, cotton swabs \& stop watch.
+										\section*{Principle}
+										When blood comes in contact with glass surface, the coagulation pathway gets activated.
+										The time taken for the formation of insoluble fibrin thread(blood clot) is called clotting time.
+										\section*{Procedure}
+										\begin{enumerate}
+											\item{Clean the tip of the ring finger with spirit and allow the finger to dry.}
+											\item{Make a good deep finger prick with the lancet to get free flowing blood.}
+											\item{Do not squeeze the finger.}
+											\item{When a blood drop of optimum size has formed, gently place the end of the capillary tube in the drop such that the other end of the tube is at a lower level.}
+											\item{Blood enters readily into the tube by capillary action.}
+											\item{Start the stop watch.}
+											\item{Hold the capillary tube with blood between the palms to maintain it at body temperature.}
+											\item{After 2 minutes, break a small bit of capillary tube at its end and check for the formation of fibrin thread.}
+											\item{Repeat it every 30 seconds until the appearance of insoluble fibrin thread between the broken ends of capillary tube and note the time.}
+											\item{The appearance of the fibrin thread indicates that the blood has clotted.}
+											\item{The total time taken for the formation of fibrin thread is recorded as the clotting time.}
+											\item{Normal clotting time by this method is 2-8 minutes.}
+										\end{enumerate}
+										\section*{Result}
+
+										The clotting time determined by Wright's capillary glass is $\rule{5cm}{0.1cm}$
+										\section*{Questions}
+										\begin{enumerate}
+											\item{Define clotting time.}
+											\item{What are the other methods used to determine the clotting time?}
+											\item{Name the conditions in which clotting time is prolonged.}
+											\item{What is haemophilia? Comment on the clotting time in this condition.}
+											\item{What is clot retraction time?}
+											\item{Name the Vitamin K dependent coagulation factors.}
+											\item{What is an anticoagulant? Mention some invivo and invitro anticoagulants.}
+											\item{Name the proteins involved in fibrinolytic system.}
+										\end{enumerate}
+
+										\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
+										\begin{tabular}{p{5in} p{1in}}
+											\textbf{Exp No:}  & \textbf{Date:}\\
+										\end{tabular}
+										\section*{Aim}
+To determine the Erythrocyte Sedimentation Rate of the given blood sample.
+										\section*{Apparatus Required}
+
+									\addfig{%
+										\begin{figure}[h]
+											\centering
+											\includegraphics[scale=.5]{./esr.jpg}
+											\label{esr}
+											%\caption*{\textbf{Estimation Of Clotting Time}}
+										\end{figure}
+										}
+										Westergren’s pipette and stand, syringe with needle and 3.8\% sodium citrate solution (anticoagulant)
+
+										\section*{Principle}
+If blood treated with anticoagulant is allowed to stand in a tube placed vertically, the RBCs settle down gradually to the bottom since their specific gravity (1.093) is greater than that of the plasma (1.030).
+The rate  at  which the  RBCs settle down is called as Erythrocyte Sedimentation
+Rate.
+
+										\section*{Procedure}
+										\textbf{Westergren’s method:}\newline
+									\begin{enumerate}	
+\item{Westergren’s pipette (tube) which is used for this procedure is open at both ends and is graduated in $mm$ from 0-200 with a bore diameter of 2.5$mm$.}
+\item{A sterile solution of 3.8\% sodium citrate is used as an anticoagulant.}
+\item{In a clean dry syringe, draw 2ml of blood from the antecubital vein under aseptic precautions and mix with 0.4ml of 3.8\% sodium citrate solution in a plastic  container with its lid closed.}
+\item{Fill the Westergren’s pipette with blood by sucking, after placing the tip of the finger over the top of the pipette to control the flow of blood into and out of it, or with a rubber bulb.}
+\item{Bring the blood column to exact zero mark.}
+\item{Keeping the finger (or the rubber bulb) over the pipette, transfer it to the Westergren stand by firmly pressing its lower end into the rubber cushion. Now.}
+\item{slip the upper end of the pipette under the screw cap.}
+\item{After an hour, note the $mm$ of clear plasma above the red cells.}
 									\end{enumerate}
-									\section*{Result}
-									The bleeding time determined by Duke’s method is $\rule{5cm}{0.1cm}$
-									\section*{Questions}
-									\begin{enumerate}
-								\item{Define bleeding time.}
-								\item{What are the other methods to determine the bleeding time?}
-								\item{What is hemostasis?}
-								\item{What is the role of platelets in hemostasis?}
-								\item{What is the normal platelet count? What do you mean by thrombocytosis?}
-								\item{Name few conditions where bleeding time is prolonged?}
-								\item{What is Thrombocytopenic purpura? Comment on the clotting time in this condition.}
-							\end{enumerate}
-
-							\chapter*{\centering Estimation Of Erythrocyte Sedimentation Rate}
-							\begin{tabular}{p{5in} p{1in}}
-								\textbf{Exp No:}  & \textbf{Date:}\\
-							\end{tabular}
-							\section*{Aim}
-							\section*{Apparatus Required}
-							\section*{Turk's Fluid Composition}
-							\section*{Procedure}
-							\section*{Calcualtion}
-							\section*{Result}
-							\section*{Questions}
+										\section*{Result}
+										Erythrocyte Sedimentation Rate of the given blood sample is $\rule{5cm}{0.1cm}$ $mm$ in first hour.
+										\section*{Questions}
+										\begin{enumerate}
+\item{What is ESR?}
+\item{What are the 3 stages by which sedimentation of red cells occur?}
+\item{What are the other methods of estimating ESR?}
+\item{What are the advantages and disadvantages of Westergren method?}
+\item{What are the advantages and disadvantages of Wintrobe method?}
+\item{Can you use oxalate mixture in Westergren method and citrate in Wintrobe method?}
+\item{What are the factors determining ESR?}
+\item{What is rouleaux formation?}
+\item{Why is ESR reading taken after one hour?}
+\item{What is the normal ESR in males and females?}
+\item{Why is the ESR higher in females than that of males?}
+\item{What is the clinical significance of ESR?}
+\item{Mention some physiological and pathological conditions in which ESR is increased / decreased?}
+\item{What is zeta potential?}
+										\end{enumerate}
 
 
-							\chapter*{\centering Packed Cell Volume}
-							\begin{tabular}{p{5in} p{1in}}
-								\textbf{Exp No:}  & \textbf{Date:}\\
-							\end{tabular}
-							\section*{Aim}
-							\section*{Apparatus Required}
-							\section*{Turk's Fluid Composition}
-							\section*{Procedure}
-							\section*{Calcualtion}
-							\section*{Result}
-							\section*{Questions}
+										\chapter*{\centering Packed Cell Volume}
+										\begin{tabular}{p{5in} p{1in}}
+											\textbf{Exp No:}  & \textbf{Date:}\\
+										\end{tabular}
+
+										\section*{Aim}
+
+									\addfig{%
+										\begin{figure}[h]
+											\centering
+											\includegraphics[scale=.5]{./pcv.jpg}
+											\label{pcv}
+											\caption*{\textbf{Estimation Of Packed Cell Volume }}
+										\end{figure}
+										}
+										To determine the packed cell volume of the given blood sample.
+										\section*{Apparatus Required}
+										Centrifuge, Hematocrit tube (Wintrobe tube), Pasteur pipette, syringe with needle and double oxalate or EDTA (anticoagulant).
+										\section*{Principle}
+										When the blood is mixed with an anticoagulant and centrifuged in a hematocrit tube, the red blood corpuscles settle down at the bottom. The ratio of the volume of the settled red blood cells to that of whole blood in the hematocrit tube is called the packed cell volume or the hematocrit. A thin grey-white layer of white cells at the top of the red blood cell column is called the buffy coat layer.
+Hematocrit measures the percentage of volume of the packed red cells. It is used to diagnose and classify the various types of anemia, along with other red blood cell indices.
+										\section*{Procedure}
+										\textbf{Wintrobe's Method:}\newline
+										\begin{enumerate}
+\item{Wintrobe’s tube is a thick walled cylindrical tube, 11$cm$ in length with an internal bore of 3$mm$. The tube is graduated from 0 to 10$cm$(100 $mm$) both in the ascending and descending order on either sides. The marking 0 – 10 from above downwards is used for ESR and the marking 0-10 from below upwards is used for reading PCV.}
+\item{In a clean dry syringe, 2ml of blood is drawn from the antecubital vein under aseptic precautions and transferred to a container with anticoagulant.}
+\item{The anticoagulated blood is then filled in the hematocrit tube from below upwards upto the mark 10 using the Pasteur pipette.}
+\item{The tube is centrifuged at a rate of 3000 rpm for a period of 30 minutes.}
+\item{At the end of 30 minutes, take the reading of upper level of packed red cell column.}
+										\end{enumerate}
+										\section*{Result}
+										The packed cell volume or the hematocrit value of the given blood sample is $\rule{2cm}{.1cm}$\%
+										\section*{Questions}
+										\begin{enumerate}
+\item{Define PCV.}
+\item{What is the clinical significance of PCV?}
+\item{What is the normal range of PCV in males and females?}
+\item{What is the ideal anti-coagulant used and why?}
+\item{What is the difference between arterial and venous blood hematocrit?}
+										\end{enumerate}
 
 
-							\chapter*{\centering Osmotic Fragility}
-							\begin{tabular}{p{5in} p{1in}}
-								\textbf{Exp No:}  & \textbf{Date:}\\
-							\end{tabular}
+										\chapter*{\centering Osmotic Fragility}
+										\begin{tabular}{p{5in} p{1in}}
+											\textbf{Exp No:}  & \textbf{Date:}\\
+										\end{tabular}
 
-							\section*{Aim}
-							\section*{Apparatus Required}
-							\section*{Turk's Fluid Composition}
-							\section*{Procedure}
-							\section*{Calcualtion}
-							\section*{Result}
-							\section*{Questions}
+										\section*{Aim}
 
-							\chapter*{\centering Specific Gravity}
+									\addfig{%
+										\begin{figure}[h]
+											\centering
+											\includegraphics[scale=.5]{./osmoticFragility.jpg}
+											\label{osmoticFragility}
+											\caption*{\textbf{Estimation Of Osmotic Fragility}}
+										\end{figure}
+										}
+To determine the osmotic fragility of red blood cells in the given sample of blood.
+										\section*{Apparatus Required}
+										Test tubes with rack, anticoagulated blood, NaCl, distilled water.
+										\section*{Principle}
+The normal red blood cells can remain suspended in 0.9\% sodium chloride solution (normal saline) for hours without any change in their size \& shape. But when they are placed in decreasing strengths of hypotonic sodium chloride solutions they imbibe water due to osmosis and finally burst releasing the hemoglobin pigment in the medium.
+										\section*{Procedure}
+										\begin{enumerate}
+\item{Sodium chloride solution of 1\% tonicity is prepared by dissolving 1 gram of NaCl in 100ml of distilled water.}
+\item{Arrange the test tubes in the rack and number them serially from 1 to 12.}
+\item{Prepare solutions of increasing hypotonicity by mixing required number of drops of 1\% NaCl solution and distilled water in the test tubes as given in the table.}
+\item{Use separate droppers for saline solution and distilled water.}
+\item{Note that the tube No.1 contains normal saline (0.9\% approximately) – Isotonic with plasma while tube No.12 contains distilled water.}
+\item{Draw 2ml of venous blood and treat it with anticoagulant in a test tube.}
+\item{Add one drop of blood into each of the above 12 tubes.}
+\item{Invert each tube gently once to mix blood with saline.}
+\item{Leave the test tubes undisturbed for one hour. Then observe the extent of hemolysis in each tube by holding the rack at eye level, with a white paper sheet behind it.}
+										\end{enumerate}
+										\section*{Intrepretation}
 
-							\begin{tabular}{p{5in} p{1in}}
-								\textbf{Exp No:}  & \textbf{Date:}\\
-							\end{tabular}
+										\begin{center}
 
-							\section*{Aim}
+										\csvautotabular{./osmoticFragility.csv}
+										\end{center}
+										\begin{itemize}
+\item{Test tube with partial hemolysis shows a supernatant fluid with pink colour proportionate to the degree of hemolysis and a lower layer of sedimented red cells at the bottom of the tube.}
+\item{Test tube with complete hemolysis shows a clear homogeneously pink solution with no cells at the bottom.}
+\item{Test tube with no hemolysis shows a clear colourless supernatant solution with a layer of sedimented red cells at the bottom of the tube}
+										\end{itemize}
+										\section*{Result}
+Hemolysis begins in $\rule{4cm}{.2cm}$\% of NaCl solution.
+Hemolysis is complete in $\rule{4cm}{.2cm}$\% of NaCl solution.
+										\section*{Questions}
+										\begin{enumerate}
+\item{What is the normal range of osmotic fragility of red cells?}
+\item{What is osmosis?}
+\item{What do you mean by hypo/hyper tonicity?}
+\item{Define fragility.}
+\item{What happens to red cells when they are placed in isotonic, hypotonic and hypertonic solutions?}
+\item{Name some conditions which increase / decrease the osmotic fragility of the RBC.}
+\item{What are the advantages of the shape of red blood cells?}
+										\end{enumerate}
+										\chapter*{\centering Specific Gravity}
+
+										\begin{tabular}{p{5in} p{1in}}
+											\textbf{Exp No:}  & \textbf{Date:}\\
+										\end{tabular}
+
+										\section*{Aim}
 
 
-							\section*{Apparatus Required}
-							\section*{Turk's Fluid Composition}
-							\section*{Procedure}
-							\section*{Calcualtion}
-							\section*{Result}
-							\section*{Questions}
+										\section*{Apparatus Required}
+										\section*{Turk's Fluid Composition}
+										\section*{Procedure}
+										\section*{Calcualtion}
+										\section*{Result}
+										\section*{Questions}
 
 
-							\part{Clinical Physiology}
+										\part{Clinical Physiology}
 
 
-						\end{document}
+									\end{document}
